data/Java/20-missing-paren/6/[M]Error.txt
https://stackoverflow.com/questions/36513898/error-expected-compiler-error
Math.java:6: error: ')' expected
        if(args[1].equalsIgnoreCase("+")
                                        ^